# script

./: .ghci  CHANGELOG  README.md  flake.nix  ppad-btcprim.cabal  ppad-script.cabal
bench/: Main.hs  Weight.hs
lib/Bitcoin/Prim/: Script.hs
test/: Main.hs
