cabal-version:      3.0
name:               ppad-btcprim
version:            0.2.1
synopsis:           Bitcoin primitives.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  Bitcoin primitives.

source-repository head
  type:     git
  location: git.ppad.tech/btcprim.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Bitcoin.Prim.Script
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

