cabal-version:      3.0
name:               ppad-script
version:            0.1.0
synopsis:           Utilities for working with Script.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  Utilities for working with Script.

source-repository head
  type:     git
  location: git.ppad.tech/script.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Bitcoin.Prim.Script
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-base16 >= 0.1 && < 0.2
    , ppad-base58 >= 0.1 && < 0.2
    , ppad-bech32 >= 0.2 && < 0.3
    , ppad-ripemd160 >= 0.1 && < 0.2
    , ppad-secp256k1 >= 0.2.1 && < 0.3
    , ppad-sha256 >= 0.2 && < 0.3
    , primitive >= 0.8 && < 0.10

test-suite script-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
    , base
    , bytestring
    , ppad-base16
    , ppad-base58
    , ppad-script
    , ppad-ripemd160
    , ppad-secp256k1
    , ppad-sha256
    , primitive
    , tasty
    , tasty-hunit
    , tasty-quickcheck

