cabal-version:      3.0
name:               ppad-script
version:            0.1.0
synopsis:           Script and utilities.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  A representation of Script, as well as utilities for working with it.

source-repository head
  type:     git
  location: git.ppad.tech/script.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Bitcoin.Prim.Script
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , primitive >= 0.8 && < 0.10
    , ppad-base16 >= 0.1 && < 0.2
    , ppad-base58 >= 0.1 && < 0.2
    , ppad-bech32 >= 0.2 && < 0.3
    , ppad-ripemd160 >= 0.1 && < 0.2
    , ppad-secp256k1 >= 0.2.1 && < 0.3
    , ppad-sha256 >= 0.2 && < 0.3

test-suite script-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
    , base
    , bytestring
    , ppad-base16
    , ppad-base58
    , ppad-script
    , ppad-ripemd160
    , ppad-secp256k1
    , ppad-sha256
    , primitive
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark script-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-script
    , primitive

benchmark script-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-script
    , weigh

