cabal-version:      3.0
name:               ppad-script
version:            0.1.0
synopsis:           Primitive Script support.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  Representations for [Script](https://en.bitcoin.it/wiki/Script),
  including abstract syntax, 'ByteArray', and base16-encoded
  'ByteString' versions, as well as fast conversion utilities for
  working with them.

source-repository head
  type:     git
  location: git.ppad.tech/script.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Bitcoin.Prim.Script
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , primitive >= 0.8 && < 0.10
    , ppad-base16 >= 0.1 && < 0.2

test-suite script-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall

  build-depends:
    , base
    , bytestring
    , ppad-base16
    , ppad-script
    , primitive
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark script-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-script
    , primitive

benchmark script-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , deepseq
    , ppad-script
    , weigh

